--- a/app/views/site/auth/login_form.html.erb
+++ b/app/views/site/auth/login_form.html.erb
@@ -6,10 +6,11 @@
     <div class="card card-md">
       <div class="card-body">
         <h2 class="h2 text-center mb-4">Login to your account</h2>
-        <form action="./" method="get" autocomplete="off" novalidate>
-          <div class="mb-3">
-            <label class="form-label">Email address</label>
-            <input type="email" class="form-control" placeholder="your@email.com" autocomplete="off">
+        <%= form_with model: @user, url: login_path do |form| %>
+          <%= render partial: "shared/errors", locals: { object: form.object } %>
+         <div class="mb-3">
+              <%= form.label :email, class: "form-label" %>
+            <%= form.email_field :email, class: "form-control" %>
           </div>
           <div class="mb-2">
             <label class="form-label">
@@ -22,7 +23,7 @@
               <input type="password" class="form-control" placeholder="Your password" autocomplete="off">
               <span class="input-group-text">
                 <a href="#" class="link-secondary" title="Show password"
-                  data-bs-toggle="tooltip"><!-- Download SVG icon from http://tabler-icons.io/i/eye -->
+                  data-bs-toggle="tooltip">                  
                   <svg xmlns="http://www.w3.org/2000/svg" class="icon" width="24" height="24" viewBox="0 0 24 24"
                     stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round" stroke-linejoin="round">
                     <path stroke="none" d="M0 0h24v24H0z" fill="none" />
@@ -41,15 +42,14 @@
             </label>
           </div>
           <div class="form-footer">
-            <button type="submit" class="btn btn-primary w-100">Sign in</button>
+            <%= form.submit "Login", class: "btn btn-primary w-100" %>
           </div>
-        </form>
+        <% end %>
       </div>
       <div class="hr-text">or</div>
       <div class="card-body">
         <div class="row">
           <div class="col"><a href="#" class="btn w-100">
-              <!-- Download SVG icon from http://tabler-icons.io/i/brand-github -->
               <svg xmlns="http://www.w3.org/2000/svg" class="icon text-github" width="24" height="24"
                 viewBox="0 0 24 24" stroke-width="2" stroke="currentColor" fill="none" stroke-linecap="round"
                 stroke-linejoin="round">
@@ -57,14 +57,14 @@
                 <path
                   d="M9 19c-4.3 1.4 -4.3 -2.5 -6 -3m12 5v-3.5c0 -1 .1 -1.4 -.5 -2c2.8 -.3 5.5 -1.4 5.5 -6a4.6 4.6 0 0 0 -1.3 -3.2a4.2 4.2 0 0 0 -.1 -3.2s-1.1 -.3 -3.5 1.3a12.3 12.3 0 0 0 -6.2 0c-2.4 -1.6 -3.5 -1.3 -3.5 -1.3a4.2 4.2 0 0 0 -.1 3.2a4.6 4.6 0 0 0 -1.3 3.2c0 4.6 2.7 5.7 5.5 6c-.6 .6 -.6 1.2 -.5 2v3.5" />
               </svg>
-              Login with Github
+              Login with Google
             </a>
           </div>
         </div>
       </div>
     </div>
     <div class="text-center text-muted mt-3">
-      Don't have account yet? <a href="./sign-up.html" tabindex="-1">Sign up</a>
+      Don't have account yet? <%= link_to "Register" , register_form_path %>
     </div>
   </div>
 </div>
