--- a/app/views/site/categories.html.erb
+++ b/app/views/site/categories.html.erb
@@ -1,1 +1,11 @@
-categories
+<div class="row row-deck row-cards mx-auto">
+  <% @categories.each do |category| %>
+    <div class="col-md-6 col-lg-2 ">
+      <div class="">
+        <a href="/categories/<%= category.id %>" class="card card-link card-link-pop">
+          <div class="card-body"><%= category.name %></div>
+        </a>
+      </div>
+    </div>
+  <% end %>
+</div>
